<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="title"
            type="String" />

        <variable
            name="viewModel"
            type="com.dicoding.ohmymovies.detailtvshow.DetailTvshowViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:background="@color/colorPrimary"
                app:titleTextColor="@android:color/white"
                android:elevation="3dp"
                app:title="@{title}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/contentDetailTvshow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.detailTvshowShow ? View.VISIBLE : View.GONE, default=visible}"
                tools:context=".detailtvshow.DetailTvshowActivity"
                android:padding="24dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/wrapperPoster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/posterTvshow"
                        android:layout_width="120dp"
                        android:layout_height="180dp"
                        android:contentDescription="@{viewModel.tvshowResponse.posterPath}"
                        android:src="@drawable/poster_bohemian" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/labelRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:text="@string/rating_label"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/rating"
                    app:layout_constraintLeft_toRightOf="@id/wrapperPoster"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:text="@{viewModel.tvshowResponse.rating}"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/labelIsAiring"
                    app:layout_constraintLeft_toRightOf="@id/wrapperPoster"
                    app:layout_constraintTop_toBottomOf="@id/labelRating" />

                <TextView
                    android:id="@+id/labelIsAiring"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/airing_label"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/isAiring"
                    app:layout_constraintLeft_toRightOf="@id/wrapperPoster"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rating" />

                <TextView
                    android:id="@+id/isAiring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:text="@{viewModel.tvshowResponse.inProductionAsString}"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/labelStatus"
                    app:layout_constraintLeft_toRightOf="@id/wrapperPoster"
                    app:layout_constraintTop_toBottomOf="@id/labelIsAiring" />

                <TextView
                    android:id="@+id/labelStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/status_label"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/status"
                    app:layout_constraintLeft_toRightOf="@id/wrapperPoster"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/isAiring" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:text="@{viewModel.tvshowResponse.status}"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toRightOf="@id/wrapperPoster"
                    app:layout_constraintTop_toBottomOf="@id/labelStatus" />

                <TextView
                    android:id="@+id/labelGenres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/genres_label"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/wrapperPoster" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/genres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/labelGenres"
                    />

                <TextView
                    android:id="@+id/labelOverview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/overview_label"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/genres" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.tvshowResponse.overview}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/labelOverview" />

                <TextView
                    android:id="@+id/labelHomepage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/homepage_label"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/overview" />

                <TextView
                    android:id="@+id/homepage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.tvshowResponse.homepage}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/labelHomepage" />

                <TextView
                    android:id="@+id/labelLanguage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/language_label"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/homepage" />

                <TextView
                    android:id="@+id/language"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.tvshowResponse.languagesAsString}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/labelLanguage" />

                <TextView
                    android:id="@+id/labelEpisodeCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/total_episode_label"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/language" />

                <TextView
                    android:id="@+id/episodeCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.tvshowResponse.episodeCountAsString()}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/labelEpisodeCount" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                android:id="@+id/error"
                layout="@layout/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{viewModel.error ? View.VISIBLE : View.GONE, default=gone}" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE, default=gone}" />

        </LinearLayout>

    </ScrollView>
</layout>